# chatbot_mlpro

./: README.md  main.py  pyproject.toml  sample.env
api/: chat_openai.py  chat_openai_langchain.py  routes.py
prompts/: poesie.py  system.py
streamlit/: app.py
test_txt/: texte_entier.txt
