[project]
name = "chatbot-mlpro"
version = "0.1.0"
description = ""
authors = [
    {name = "GuillaumeKoessler",email = "guillaume.koessler@gmail.com"}
]
license = {text = "Apache V2.0"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "openai (>=1.65.5,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
